--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>My Domain</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+	<style>
+		   body { 
+		     background: url(./coffee.jpg) no-repeat center center fixed; 
+		     -webkit-background-size: cover;
+		     -moz-background-size: cover;
+		     -o-background-size: cover;
+		     background-size: cover;
+			 font-family: 'Roboto Condensed', sans-serif;
+		   }
+		   
+		   .content-top {
+			   font-size:24px;
+			   font-weight:700;
+			   color:white;
+		       overflow: hidden;
+			   margin-top:40px;
+			   margin-left:40px;
+			   margin-right:40px;
+			   margin-bottom:0px;
+		       padding: 20px;
+		       background: #444;
+		       background: rgba(0, 0, 0, 0.35);
+		       text-align: left;
+		   }
+		   
+		   .content {			   
+			   color:white;
+			   margin-top:0px;
+			   margin-left:40px;
+			   margin-right:40px;
+			   margin-bottom:40px;
+		       padding: 20px;
+		       background: #444;
+		       background: rgba(0, 0, 0, 0.3);
+		       text-align: left;
+		   }
+	</style>
 </head>
 <body>
-<iframe id="video-gYFKFCbq allowfullscreen=" allowfullscreen"="" allow="autoplay; fullscreen;" controls="0" title="Spectrum video" src="https://player.vimeo.com/video/943716158?background=1&amp;dnt=1" class="embed-responsive-item" width="990" height="400"></iframe>
+	<div class="content-top">This is a place where you can put a header</div>
+	<div class="content">
+		<iframe id="video-gYFKFCbq allowfullscreen=" allowfullscreen"="" allow="autoplay; fullscreen;" controls="0" title="Spectrum video" src="https://player.vimeo.com/video/943716158?background=1&amp;dnt=1" class="embed-responsive-item" width="990" height="400"></iframe>
+	</div>	
 </body>
 </html>
