--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</style>
 </head>
 <body>
-	<div class="content-top">This is a place where you can put a header</div>
+	<div class="content-top">Welcome! Have a great day ahead!</div>
 	<div class="content">
 		<div id="gYFKFCbq" class="responsive-video" data-id="gYFKFCbq" data-video-id="943716158" data-video-type="vimeo" aria-label="Play Spectrum video" data-video-title="Spectrum video" data-video-autoplay="1">
 
