--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		       padding: 20px;
 		       background: #444;
 		       background: rgba(0, 0, 0, 0.35);
-		       text-align: left;
+		       text-align: center;
 		   }
 		   
 		   .content {			   
@@ -35,7 +35,6 @@
 			   margin-left:40px;
 			   margin-right:40px;
 			   margin-bottom:40px;
-		       padding: 20px;
 		       background: #444;
 		       background: rgba(0, 0, 0, 0.3);
 		       text-align: left;
